# ace-polanie

./: .gitmodules  README.md
asset_convert/: CMakeLists.txt
asset_convert/src/: asset_convert.cpp
asset_convert/src/common/: bitmap.cpp  bitmap.hpp  endian.hpp  fs.cpp  fs.hpp  logging.hpp  palette.cpp  palette.hpp  parse.hpp  rgb.cpp  rgb.hpp
game/: playfli.c
game_ace/: CMakeLists.txt
game_ace/cmake/: button.cmake  button_bg.cmake  dead.cmake  fire.cmake  flip_bitmaps.cmake  hit.cmake  missiles.cmake  mouse.cmake  mover_axe.cmake  mover_bear.cmake  mover_beast.cmake  mover_cow.cmake  mover_farmer.cmake  mover_hunter.cmake  mover_knight.cmake  mover_mage.cmake  mover_pike.cmake  mover_priest.cmake  mover_priestess.cmake  mover_sword.cmake  mover_xbow.cmake  movers.cmake  picture.cmake  tree.cmake
game_ace/res/: polanie.gpl
game_ace/res/copied/: uni54.fnt
game_ace/res/copied/levels/: LEVEL.26  LEVEL.27  LEVEL.28  LEVEL.29  LEVEL.30  LEVEL.31  LEVEL.32  LEVEL.33  LEVEL.34  LEVEL.35  LEVEL.36  LEVEL.37  LEVEL.38  LEVEL.39  LEVEL.40  LEVEL.41  LEVEL.42  LEVEL.43  LEVEL.44  LEVEL.45  LEVEL.46  LEVEL.47  LEVEL.48  LEVEL.49  LEVEL.50  LEVEL.51  LEVEL.52  LEVEL.INI  LEVEL2.INI
game_ace/src/: battle.c  battle.h  bitmap_pair.c  bitmap_pair.h  building.c  building.h  button.c  button.h  castle.c  castle.h  command.h  gfx.c  gfx.h  map_object.c  map_object.h  menu.c  menu.h  misc.c  misc.h  missile.c  missile.h  mover.c  mover.h  picture.c  picture.h  polanie.c  polanie.h  track.h  world.c  world.h
